# pointsmaxxer

./: .gitignore  README.md  config.yaml  pyproject.toml
pointsmaxxer/: __init__.py  analyzer.py  booking.py  cli.py  config.py  database.py  models.py  portfolio.py  price_drops.py  scheduler.py
pointsmaxxer/scrapers/: __init__.py  aa.py  aeroplan.py  alaska.py  ba.py  base.py  delta.py  demo.py  google_flights.py  seats_aero.py  united.py
pointsmaxxer/utils/: __init__.py  browser.py  cache.py  mouse.py
tests/: __init__.py  test_analyzer.py  test_booking.py  test_config.py  test_models.py  test_portfolio.py  test_price_drops.py
